dvtDashboard/mainApp/static/css/map-style.css
.options-div {
    padding: var(--sl-spacing-x-small)
}

.options-header {
    font-size: var(--sl-font-size-large);
    margin-top: 0;
    margin-bottom: .5rem;
}

.options-divider {
    --spacing: 0;
}

#main-content-divider {
    font-size: 2rem;
    background-color: var(--sl-color-neutral-300);
}

#map-sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#map-options {
    height: max-content;
    overflow-wrap: normal;
    overflow-y: scroll;
}

#map-aggregation-vis {
    width: 100%;
    overflow: hidden;
    padding: var(--sl-spacing-x-small);
    display: flex;
    flex-direction: column;
}

#map-aggregation-donut-svg {
    aspect-ratio: 50/20;
}
#map-aggregation-svg {
    aspect-ratio: 50/35;
}
#map-aggregation-graph-title {
    margin: 0;
    font-size: var(--sl-font-size-x-small);
}

#map-aggregation-switch {
    position: absolute;
    top: var(--sl-spacing-small);
    right: var(--sl-spacing-small);
}

#map-aggregation-switch>sl-radio-button::part(button) {
    background-color: var(--sl-color-neutral-500);
}

#map-aggregation-switch>sl-radio-button::part(button--checked) {
    background-color: var(--sl-color-primary-600);
}

#map-options-hospital-icons-toggle::part(control--checked) {
    border-color: var(--sl-color-neutral-400);
    background-color: var(--sl-color-neutral-400);
}

#map-div {
    position: relative;
}

path.county {
    stroke-width: 1;
    stroke: black;

}

path.zcta {
    stroke-width: 0.2;
    stroke: black;
    stroke-linejoin: round;

}

.legend-background {
    fill: var(--sl-color-neutral-50);
    fill-opacity: .5;
}

.legend>circle {
    fill: var(--sl-color-neutral-500);
    stroke: var(--sl-color-neutral-600);
    stroke-width: 3;
}

.legend>line {
    stroke-width: 1.5;
    stroke: var(--sl-color-neutral-800);
}

.legend>text {
    text-anchor: end;
    transform: scaleY(-1);
}

.legend>text,
.tick>text {
    font-size: var(--sl-font-size-x-small);
    fill: currentColor;
}

.legend.title {
    text-anchor: middle;
    transform: scaleY(-1);
    fill: currentColor;
}

#map-color-legend-contents>text {
    fill: currentColor;
    text-anchor: middle;
}

.disease-bubble,
.hospital-bubble {
    fill-opacity: .25;
    stroke-width: 3;
    stroke-opacity: .3;
}

#map-tooltip {
    position: absolute;
    /* padding: .25em; */
    border-width: var(--sl-border-radius-small);
    border-style: solid;
    border-radius: .25em;
}

p.tooltip {
    margin: 0;
    padding-top: var(--sl-spacing-x-small);
    text-align: center;
    font-size: var(--sl-font-size-small);
}

.tooltip.text {
    margin: 0;
    padding: 0;
    font-size: var(--sl-font-size-x-small);
    white-space: nowrap;
}

#tooltip-prediction-separator {
    stroke-width: 1;
    stroke: black;
}

#tooltip-prediction-highlighter {
    opacity: .25;
    fill: var(--sl-color-gray-600);
}

